  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.58 2009/03/24 03:06:01 andreasb Exp $
==========================================================================

2.9100
------
2.9104-510  imp: all: gracefully handle lack of a supported cpu/gpu
            imp: gpgpu: raise rc5-72 buffer limit to 10000
            new: cuda: switch to CUDA 2.1
            imp: cuda: bundle libcudart.so.2 with the client release

2.9103-509  *** minimal version that supports OGR-27 and beyond ***
            new: rc5-72: support for requesting larger packets (#3918)
            new: stream: RC5-72 core for AMD stream video cards (#4099)
            imp: x86: Intel Atom (#4080)
            imp: x86: Pentium III detection (#4121)
            imp: x86: Intel Core i7 detection (#4118)
            fix: x86: Various AMD CPU Detections (#4074 & #4120)
            fix: all: Fix OGR-NG middle mark limit miscalculation on odd rulers 
            fix: all: OGR-NG state restored properly after a restart
            fix: linux: Improved OGR-NG cache management (#4076)
            imp: all: Print combined OGR-NG stubs with more details (#4082)
            fix: all: Combined OGR-NG stubs no longer appear to restart (#4083)
            new: arm: OGR-NG ASM cores
            imp: all: Summarized benchmark results (#4108)
            new: hppa: Added support for openbsd-hppa
            new: mips: Added support for openbsd-sgi
            new: sparc64: Added support for openbsd-sparc64
            fix: sparc64: fixed netbsd-sparc64 target
            fix: win64: installation and execution as service (#4130)

2.9102-508  new: x86: OGR-NG mmx core